--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.1.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
