--- a/part7/bloglist/package.json
+++ b/part7/bloglist/package.json
@@ -44,6 +44,7 @@
     "cypress": "^12.13.0",
     "eslint": "^8.41.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
