--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.5",
-    "graphql": "^16.7.1"
+    "dotenv": "^16.3.1",
+    "graphql": "^16.7.1",
+    "mongoose": "^7.4.0",
+    "mongoose-unique-validator": "^4.0.0"
   }
 }
