--- a/part9/typescript-exercises/package.json
+++ b/part9/typescript-exercises/package.json
@@ -14,6 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "eslint": "^8.45.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
